# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml
migrations/: 20250616095146_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
