[package]
name = "zero2prod"
version = "0.1.0"
authors = ["WangYue <wangyuezhijing@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 在这里可以使用任何路径，但我们遵守社区约定
# 可以使用"name"字段指定库名称，如果未指定，
# cargo 将默认使用"package.name"，这正是我们想要的
path = "src/lib.rs"

# 注意双方括号“[]“：它是TOML语法中的数组
# 一个项目只能有一个库，但是可以有多个二进制文件
# 如果要在同一个存储库中管理多个库，可以看看工作区的功能

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# 我们需要可选的'derive'功能来使用'serde'过程宏
# ‘#[derive(Serialize)]' and ‘#[derive(Deserilaze)]'
# 默认不启用该功能，以避免引入不必要的依赖项
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.19", features = ["serde"] }  # 确保启用 serde 特性
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"


# 使用类似于表格的 toml 语法以避免行内字符过多
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [ 
    "postgres",          # 保持 PostgreSQL 支持
    "runtime-tokio",     # 使用 Tokio 运行时
    "macros",            # 启用查询宏
    "any",               # 多数据库支持（可选）
    "time",              # 时间类型支持
    "uuid",              # UUID 类型支持
    "chrono",             # 日期时间支持
    "migrate",
]


# 开发依赖项（dev-dependencies）仅在运行测试或者示例时使用
# 他们没有被包含在最终的应用程序二进制文件中
[dev-dependencies]
reqwest = "0.11"
once_cell = "1"

